dev/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: yas-dev
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: ghcr.io/nashtech-garage/yas-payment:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
