dev/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: yas-dev
  labels:
    app: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
